# uavrt_source

./: .gitignore  README.md  summer_2022_task_list.md  unorganized_todo.md
archive/: README.md  plot_pulse_data.py  qgc_enum_class_definitions.hpp  ros2_installation_notes.md  unorganized_todo.md
archive/not_used_messages/: SubprocessControl.msg  SubprocessStatus.msg
archive/old_uavrt_supervisor/: supervisor.py
generated_tags/: README.md
log/: README.md
log/airspyhf_channelize_log/: README.md
log/detector_log/: README.md
log/detector_log/config_example/config/: detectorConfig.txt
log/netcat_airspyhf_log/: README.md
portairspy_channelize/: AsyncBuffer.c  AsyncBuffer.h  AsyncBuffercgHelper.c  AsyncBuffercgHelper.h  Channelizer.c  Channelizer.h  CoderTimeAPI.c  FFTImplementationCallback.c  FFTImplementationCallback.h  SystemCore.c  SystemCore.h  airspy_channelize  airspy_channelize.c  airspy_channelize.h  airspy_channelize_data.c  airspy_channelize_data.h  airspy_channelize_emxutil.c  airspy_channelize_emxutil.h  airspy_channelize_initialize.c  airspy_channelize_initialize.h  airspy_channelize_internal_types.h  airspy_channelize_rtwutil.c  airspy_channelize_rtwutil.h  airspy_channelize_terminate.c  airspy_channelize_terminate.h  airspy_channelize_types.h  airspychannelize100.c  airspychannelize100.h  airspychannelize200.c  airspychannelize200.h  buildInfo.mat  datetime.c  datetime.h  getLocalTime.c  getLocalTime.h  handle.c  handle.h  int2singlecomplex.c  int2singlecomplex.h  libexpat.so.1  (+28 more)
uavrt_detection/: CMakeLists.txt  package.xml  packageInfo.mat
uavrt_detection/include/uavrt_detection/: AsyncBuffer.h  AsyncBuffercgHelper.h  CoderTimeAPI.h  DetectorConfig.h  FFTImplementationCallback.h  UDPReceiver.h  UDPSender.h  abs.h  all.h  allOrAny.h  anonymous_function.h  any1.h  assembleWq.h  assertCompatibleDims.h  assertValidSizeArg.h  bigProduct.h  buildtimecorrelatormatrix.h  builtin_interfaces_TimeStruct.h  channelreceiver.h  circshift.h  colon.h  combineVectorElements.h  controlreceiver.h  datetime.h  dec2bin.h  dec2hex.h  diff.h  div.h  eml_int_forloop_overflow_check.h  eml_rand.h  eml_rand_mcg16807_stateful.h  eml_rand_mt19937ar.h  eml_rand_mt19937ar_stateful.h  eml_rand_shr3cong.h  eml_rand_shr3cong_stateful.h  eml_randn.h  evfit.h  feof.h  fft.h  fftshift.h  (+98 more)
uavrt_detection/src/: AsyncBuffer.cpp  AsyncBuffercgHelper.cpp  CoderTimeAPI.cpp  DetectorConfig.cpp  FFTImplementationCallback.cpp  UDPReceiver.cpp  UDPSender.cpp  abs.cpp  all.cpp  allOrAny.cpp  any1.cpp  assembleWq.cpp  assertCompatibleDims.cpp  assertValidSizeArg.cpp  bigProduct.cpp  buildtimecorrelatormatrix.cpp  builtin_interfaces_TimeStruct.cpp  channelreceiver.cpp  circshift.cpp  coder_fileops.c  colon.cpp  combineVectorElements.cpp  controlreceiver.cpp  datetime.cpp  dec2bin.cpp  dec2hex.cpp  diff.cpp  div.cpp  eml_int_forloop_overflow_check.cpp  eml_rand.cpp  eml_rand_mcg16807_stateful.cpp  eml_rand_mt19937ar.cpp  eml_rand_mt19937ar_stateful.cpp  eml_rand_shr3cong.cpp  eml_rand_shr3cong_stateful.cpp  eml_randn.cpp  evfit.cpp  feof.cpp  fft.cpp  fftshift.cpp  (+103 more)
